Style registration form.

--- a/registration_card/registration_form.html
+++ b/registration_card/registration_form.html
@@ -11,6 +11,42 @@
       <h2 class="registration-card__title">Registration</h2>
       <form action="" class="registration-form">
         <div class="column">
+          <!-- User Name -->
+          <div class="registration-form__input-box">
+            <label for="uname" class="registration-form__label">Username</label>
+            <input
+              type="text"
+              id="uname"
+              name="uname"
+              placeholder="Enter your username"
+              class="registration-form__input" />
+          </div>
+          <!-- Phone Number -->
+          <div class="registration-form__input-box">
+            <label for="pnumber" class="registration-form__label"
+              >Phone Number</label
+            >
+            <input
+              type="number"
+              id="pnumber"
+              name="pnumber"
+              placeholder="Enter your username"
+              class="registration-form__input" />
+          </div>
+          <!-- Confirm Password -->
+          <div class="registration-form__input-box">
+            <label for="cpassword" class="registration-form__label"
+              >Confirm Password</label
+            >
+            <input
+              type="password"
+              id="cpassword"
+              name="cpassword"
+              placeholder="Confirm your password"
+              class="registration-form__input" />
+          </div>
+        </div>
+        <div class="column">
           <!-- Full Name -->
           <div class="registration-form__input-box">
             <label for="fname" class="registration-form__label"
@@ -46,64 +82,39 @@
               class="registration-form__input" />
           </div>
           <!-- Radio Button -->
-          <h2 class="radio-buttons__title">Gender</h2>
-          <div class="radio-buttons">
-            <div class="radio-button">
-              <input type="radio" id="male" name="fav_language" value="Male" />
-              <label for="male">Male</label>
-            </div>
-            <div class="radio-button">
-              <input
-                type="radio"
-                id="female"
-                name="fav_language"
-                value="Female" />
-              <label for="female">Female</label><br />
-            </div>
-            <div class="radio-button">
-              <input
-                type="radio"
-                id="others"
-                name="fav_language"
-                value="others" />
-              <label for="others">Others</label>
+          <div class="radio-button-box">
+            <h2 class="radio-buttons__title">Gender</h2>
+            <div class="radio-buttons">
+              <div class="radio-button">
+                <input
+                  type="radio"
+                  id="male"
+                  name="fav_language"
+                  value="Male" />
+                <label for="male">Male</label>
+              </div>
+              <div class="radio-button">
+                <input
+                  type="radio"
+                  id="female"
+                  name="fav_language"
+                  value="Female" />
+                <label for="female">Female</label><br />
+              </div>
+              <div class="radio-button">
+                <input
+                  type="radio"
+                  id="others"
+                  name="fav_language"
+                  value="others" />
+                <label for="others">Others</label>
+              </div>
             </div>
           </div>
-        </div>
-        <div class="column">
-          <!-- User Name -->
-          <div class="registration-form__input-box">
-            <label for="uname" class="registration-form__label">Username</label>
-            <input
-              type="text"
-              id="uname"
-              name="uname"
-              placeholder="Enter your username"
-              class="registration-form__input" />
-          </div>
-          <!-- Phone Number -->
-          <div class="registration-form__input-box">
-            <label for="pnumber" class="registration-form__label"
-              >Phone Number</label
-            >
-            <input
-              type="number"
-              id="pnumber"
-              name="pnumber"
-              placeholder="Enter your username"
-              class="registration-form__input" />
-          </div>
-          <!-- Confirm Password -->
-          <div class="registration-form__input-box">
-            <label for="cpassword" class="registration-form__label"
-              >Confirm Password</label
-            >
-            <input
-              type="password"
-              id="cpassword"
-              name="cpassword"
-              placeholder="Confirm your password"
-              class="registration-form__input" />
+          <!-- Buttons -->
+          <div class="registration-form__button-box">
+            <button class="btn btn--cancel">Cancel</button>
+            <button type="submit" class="btn btn--submit">Submit</button>
           </div>
         </div>
       </form>
