Reform classes, style radio button, and change bacground image.

--- a/registration_card/registration_form.html
+++ b/registration_card/registration_form.html
@@ -7,35 +7,33 @@
     <link rel="stylesheet" href="registration_form.css" />
   </head>
   <body>
-    <div class="registration-card">
-      <h2 class="registration-card__title">Registration</h2>
-      <form action="" class="registration-form">
+    <div class="reg-card">
+      <h2 class="reg-card__title">Registration</h2>
+      <form action="" class="reg-form">
         <div class="column">
           <!-- User Name -->
-          <div class="registration-form__input-box">
-            <label for="uname" class="registration-form__label">Username</label>
+          <div class="reg-form__input-box">
+            <label for="uname" class="reg-form__label">Username</label>
             <input
               type="text"
               id="uname"
               name="uname"
               placeholder="Enter your username"
-              class="registration-form__input" />
+              class="reg-form__input" />
           </div>
           <!-- Phone Number -->
-          <div class="registration-form__input-box">
-            <label for="pnumber" class="registration-form__label"
-              >Phone Number</label
-            >
+          <div class="reg-form__input-box">
+            <label for="pnumber" class="reg-form__label">Phone Number</label>
             <input
               type="number"
               id="pnumber"
               name="pnumber"
-              placeholder="Enter your username"
-              class="registration-form__input" />
+              placeholder="Enter your number"
+              class="reg-form__input" />
           </div>
           <!-- Confirm Password -->
-          <div class="registration-form__input-box">
-            <label for="cpassword" class="registration-form__label"
+          <div class="reg-form__input-box">
+            <label for="cpassword" class="reg-form__label"
               >Confirm Password</label
             >
             <input
@@ -43,43 +41,39 @@
               id="cpassword"
               name="cpassword"
               placeholder="Confirm your password"
-              class="registration-form__input" />
+              class="reg-form__input" />
           </div>
         </div>
         <div class="column">
           <!-- Full Name -->
-          <div class="registration-form__input-box">
-            <label for="fname" class="registration-form__label"
-              >Full Name</label
-            >
+          <div class="reg-form__input-box">
+            <label for="fname" class="reg-form__label">Full Name</label>
             <input
               type="text"
               id="fname"
               name="fname"
               placeholder="Enter your name"
-              class="registration-form__input" />
+              class="reg-form__input" />
           </div>
           <!-- Email -->
-          <div class="registration-form__input-box">
-            <label for="email" class="registration-form__label">Email</label>
+          <div class="reg-form__input-box">
+            <label for="email" class="reg-form__label">Email</label>
             <input
               type="email"
               id="email"
               name="email"
               placeholder="Enter your email"
-              class="registration-form__input" />
+              class="reg-form__input" />
           </div>
           <!-- Password -->
-          <div class="registration-form__input-box">
-            <label for="password" class="registration-form__label"
-              >Password</label
-            >
+          <div class="reg-form__input-box">
+            <label for="password" class="reg-form__label">Password</label>
             <input
               type="password"
               id="password"
               name="password"
               placeholder="Enter your password"
-              class="registration-form__input" />
+              class="reg-form__input" />
           </div>
           <!-- Radio Button -->
           <div class="radio-button-box">
@@ -112,7 +106,7 @@
             </div>
           </div>
           <!-- Buttons -->
-          <div class="registration-form__button-box">
+          <div class="reg-form__button-box">
             <button class="btn btn--cancel">Cancel</button>
             <button type="submit" class="btn btn--submit">Submit</button>
           </div>
